--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
       name="viewport"
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
     />
-    <link
-      rel="icon"
-      type="image/ico"
-      href="https://scontent-mia3-1.xx.fbcdn.net/v/t39.30808-6/275991869_103594065617109_228020381243183883_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=QnvI18noyB8AX9QIrlv&_nc_ht=scontent-mia3-1.xx&oh=00_AfDbOWdOtf6ClQljjTSHpIzB2wZnJMjbIMBCuWuIx8ngEA&oe=63618A4E"
-    />
+    <link rel="icon" type="image/webp" href="icons/imagotipo.webp" />
   </head>
   <body>
     <!-- quasar:entry-point -->
